Simplify adding cards to collections
